tests/macros/checkbox/default_with_sep.stderr
error: expected `,`
 --> $DIR/default_with_sep.rs:6:33
  |
6 |                 sep "separator" default true,
  |                                 ^^^^^^^
