tests/macros/checkbox/default_with_sep.rs
fn main() {
    inquisition::questions! [
        checkbox {
            name: "name",
            choices: [
                sep "separator" default true,
            ],
        }
    ];
}
